--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-bottom: 10px;
+        margin-top: 10px;
+        margin-bottom: 0;
         transform: none;
     }
     .collage.left, .collage.right {
@@ -67,9 +68,25 @@ body {
         margin: 0 5px;
     }
     .container {
-        margin-top: 10px;
+        margin-top: 0;
+    }
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+    }
+    .container {
+        order: 1;
+    }
+    .collage.left {
+        order: 2;
+    }
+    .collage.right {
+        order: 3;
     }
 }
+
 
 .collage.left {
     left: 10%;
